--- a/simple.html
+++ b/simple.html
@@ -1,45 +1,169 @@
-<!-- Inliner Build Version 4380b7741bb759d6cb997545f3add21ad48f010b -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/xhtml" style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; margin: 0; padding: 0;">
-  <head>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width" />
-  </head>
-  <body style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; width: 100% !important; height: 100%; -webkit-font-smoothing: antialiased; -webkit-text-size-adjust: none; background: url('../images/bg.jpg'); margin: 0; padding: 0;"><style type="text/css">
-.button:hover {
-background: #333; border: solid #333; border-width: 10px 20px 8px;
-}
-</style>
-<table class="body-wrap" style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; width: 100% !important; height: 100%; -webkit-font-smoothing: antialiased; -webkit-text-size-adjust: none; background: url('../images/bg.jpg'); margin: 0; padding: 0;" background="../images/bg.jpg"><tr style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; margin: 0; padding: 0;"><td class="container" style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; display: block !important; clear: both !important; max-width: 580px !important; margin: 0 auto; padding: 0;">
+    <meta name="viewport" content="width=device-width"/>
+
+
+    <style type="text/css">
+    * {
+      margin: 0;
+      padding: 0;
+      font-size: 100%;
+      font-family: 'Avenir Next', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+      line-height: 1.65; }
+
+    img {
+      max-width: 100%;
+      margin: 0 auto;
+      display: block; }
+
+    body,
+    .body-wrap {
+      width: 100% !important;
+      height: 100%;
+      background: url("https://raw.githubusercontent.com/violetzie/PC_Invite/master/images/bg.jpg");
+      background-size: cover;
+      background-repeat: repeat;
+      -webkit-font-smoothing: antialiased;
+      -webkit-text-size-adjust: none; }
+
+    a {
+      color: #71bc37;
+      text-decoration: none; }
+
+    .text-center {
+      text-align: center; }
+
+    .text-right {
+      text-align: right; }
+
+    .text-left {
+      text-align: left; }
+
+    .button {
+      display: inline-block;
+      color: white;
+      background: #3dffa8;
+      border: solid #3dffa8;
+      border-width: 10px 20px 8px;
+      font-weight: bold;
+      border-radius: 4px; }
+
+    .button:hover{background: #333; border: solid #333; border-width: 10px 20px 8px;}
+
+    h1, h2, h3, h4, h5, h6 {
+      margin-bottom: 20px;
+      line-height: 1.25; }
+
+    h1 {
+      font-size: 32px; }
+
+    h2 {
+      font-size: 28px; }
+
+    h3 {
+      font-size: 24px; }
+
+    h4 {
+      font-size: 20px; }
+
+    h5 {
+      font-size: 16px; }
+
+    p, ul, ol {
+      font-size: 16px;
+      font-weight: normal;
+      margin-bottom: 20px; }
+
+    .container {
+      display: block !important;
+      clear: both !important;
+      margin: 0 auto !important;
+      max-width: 580px !important; }
+      .container table {
+        width: 100% !important;
+        border-collapse: collapse; }
+      .container .masthead {
+        padding: 10px 0;
+        color: white; }
+        .container .masthead h1 {
+          margin: 0 auto !important;
+          color: #888;
+          max-width: 90%;}
+      .container .content {
+        background: #FCFFFD;
+        padding: 30px 35px;
+        border-radius: 10px; }
+        .container .content.footer {
+          background: none;
+          padding-top: 10px;
+          padding-bottom: 5px; }
+          .container .content.footer p {
+            margin-bottom: 0;
+            color: #888;
+            text-align: center;
+            font-size: 14px; }
+          .container .content.footer a {
+            color: #888;
+            text-decoration: none;
+            font-weight: bold; }
+    </style>
+</head>
+<body>
+<table class="body-wrap">
+    <tr>
+        <td class="container">
 
             <!-- Message start -->
-            <table style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; width: 100% !important; border-collapse: collapse; margin: 0; padding: 0;"><tr style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; margin: 0; padding: 0;"><td align="center" class="masthead" style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; color: white; margin: 0; padding: 10px 0;">
-                        <h1 style="font-size: 32px; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.25; color: #888; max-width: 90%; margin: 0 auto; padding: 0;">Logo</h1>
+            <table>
+                <tr>
+                    <td align="center" class="masthead">
+                        <h1>Logo</h1>
 
                     </td>
-                </tr><tr style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; margin: 0; padding: 0;"><td class="content" style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; border-radius: 10px; background: #FCFFFD; margin: 0; padding: 30px 35px;" bgcolor="#FCFFFD">
+                </tr>
+                <tr>
+                    <td class="content">
 
-                        <h2 style="font-size: 28px; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.25; margin: 0 0 20px; padding: 0;">Hello!</h2>
-                        <p style="font-size: 16px; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; font-weight: normal; margin: 0 0 20px; padding: 0;">Prague College and it's students would like to invite you to the HND Graphic design and Interactive Media 2nd Year Exhibitions in which students of the finishing classes will have a chance to present the works that they have done in their two years presence at Prague College to the wide public.</p>
-<p style="font-size: 16px; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; font-weight: normal; margin: 0 0 20px; padding: 0;">Whether you are interested in unique artistic expression, design, art, printed and digital media or any other part of graphic design and interactive media, you should find what catches your eye with 23 students presenting from the Graphic Design programme and (X) students from Interactive Media. Each and every student worked hard to present their portfolio and works in the most professional matter.</p>
-<p style="font-size: 16px; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; font-weight: normal; margin: 0 0 20px; padding: 0;">During the opening day you'll also be able to refresh with a wide variety of wines as well as foods and delicous snacks which will be made by the students themselves. The event is taking place in the main building of Prague College at Polská 10, Vinohrady on the 2nd of June, 2015 starting at 5PM. It will take place there for the following rest of the week, so don't worry if you can't make it to the opening day.</p>
-                        <table style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; width: 100% !important; border-collapse: collapse; margin: 0; padding: 0;"><tr style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; margin: 0; padding: 0;"><td align="center" style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; margin: 0; padding: 0;">
-                                    <p style="font-size: 16px; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; font-weight: normal; margin: 0 0 20px; padding: 0;">
-                                        <a href="#" class="button" style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; color: white; text-decoration: none; display: inline-block; font-weight: bold; border-radius: 4px; background: #3dffa8; margin: 0; padding: 0; border-color: #3dffa8; border-style: solid; border-width: 10px 20px 8px;">More information</a>
+                        <h2>Hello!</h2>
+                        <p>Prague College and it's students would like to invite you to the HND Graphic design and Interactive Media 2nd Year Exhibitions in which students of the finishing classes will have a chance to present the works that they have done in their two years presence at Prague College to the wide public.</p>
+<p>Whether you are interested in unique artistic expression, design, art, printed and digital media or any other part of graphic design and interactive media, you should find what catches your eye with 23 students presenting from the Graphic Design programme and (X) students from Interactive Media. Each and every student worked hard to present their portfolio and works in the most professional matter.</p>
+<p>During the opening day you'll also be able to refresh with a wide variety of wines as well as foods and delicous snacks which will be made by the students themselves. The event is taking place in the main building of Prague College at Polská 10, Vinohrady on the 2nd of June, 2015 starting at 5PM. It will take place there for the following rest of the week, so don't worry if you can't make it to the opening day.</p>
+                        <table>
+                            <tr>
+                                <td align="center">
+                                    <p>
+                                        <a href="#" class="button">More information</a>
                                     </p>
                                 </td>
-                            </tr></table><p style="font-size: 16px; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; font-weight: normal; margin: 0 0 20px; padding: 0;"></p>
+                            </tr>
+                        </table>
 
-                        <center style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; margin: 0; padding: 0;"><strong style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; margin: 0; padding: 0;"><p style="font-size: 16px; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; font-weight: normal; margin: 0 0 20px; padding: 0;">We're looking forward to seeing you there!</p></strong><em style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; margin: 0; padding: 0;">Prague College &amp; its students</em></center>
+                        <p></p>
+
+                        <center><strong><p>We're looking forward to seeing you there!</strong></br><em>Prague College & its students</em></p></center>
 
                     </td>
-                </tr></table></td>
-    </tr><tr style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; margin: 0; padding: 0;"><td class="container" style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; display: block !important; clear: both !important; max-width: 580px !important; margin: 0 auto; padding: 0;">
+                </tr>
+            </table>
+
+        </td>
+    </tr>
+    <tr>
+        <td class="container">
 
             <!-- Message start -->
-            <table style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; width: 100% !important; border-collapse: collapse; margin: 0; padding: 0;"><tr style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; margin: 0; padding: 0;"><td class="content footer" align="center" style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; border-radius: 10px; background: #FCFFFD none; margin: 0; padding: 10px 35px 5px;" bgcolor="#FCFFFD">
-                        <p style="font-size: 14px; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; font-weight: normal; color: #888; text-align: center; margin: 0; padding: 0;" align="center"><a href="www.praguecollege.cz" style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; color: #888; text-decoration: none; font-weight: bold; margin: 0; padding: 0;">www.praguecollege.cz</a> | Visit this <a href="#" style="font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65; color: #888; text-decoration: none; font-weight: bold; margin: 0; padding: 0;">link</a> if you can't see this email properly.</p>
+            <table>
+                <tr>
+                    <td class="content footer" align="center">
+                        <p><a href="www.praguecollege.cz">www.praguecollege.cz</a> | Visit this <a href="#">link</a> if you can't see this email properly.</p>
                     </td>
-                </tr></table></td>
-    </tr></table></body>
+                </tr>
+            </table>
+
+        </td>
+    </tr>
+</table>
+</body>
 </html>
