--- a/simple.html
+++ b/simple.html
@@ -119,7 +119,9 @@
             <table>
                 <tr>
                     <td align="center" class="masthead">
-                        <h1>Logo</h1>
+                        <h1><a href="">
+    <img src="logo.png" alt="Join" />
+  </a></h1>
 
                     </td>
                 </tr>
