--- a/simple.html
+++ b/simple.html
@@ -91,6 +91,11 @@
           margin: 0 auto !important;
           color: #888;
           max-width: 90%;}
+          .container .masthead img{
+            max-width: 100px !important;
+            padding-bottom: 15px;
+            padding-top: 10px;
+          }
       .container .content {
         background: #FCFFFD;
         padding: 30px 35px;
@@ -105,9 +110,19 @@
             text-align: center;
             font-size: 14px; }
           .container .content.footer a {
-            color: #888;
-            text-decoration: none;
+            color: #666;
+            text-decoration: underline;
             font-weight: bold; }
+      .affilate{
+        max-width: 100px;
+        display: inline-block;
+        padding: 30px;
+        padding-bottom: 0px;
+      }
+      .two{
+        max-width: 120px !important;
+      }
+      .affil{margin: 0 auto !important; margin-bottom:0px; padding-top: 20px; max-width: 508px !important; text-align:center;}
     </style>
 </head>
 <body>
@@ -120,7 +135,7 @@
                 <tr>
                     <td align="center" class="masthead">
                         <h1><a href="">
-    <img src="logo.png" alt="Join" />
+    <img src="https://raw.githubusercontent.com/violetzie/PC_Invite/master/images/logo.png" alt="Join" />
   </a></h1>
 
                     </td>
@@ -146,11 +161,18 @@
 
                         <center><strong><p>We're looking forward to seeing you there!</strong></br><em>Prague College & its students</em></p></center>
 
+                          <p class="affil">
+                          <img class="affilate" src="images/soad.png" />
+                          <img class="affilate two" src="images/pclogo.png" />
+                          <img class="affilate" src="images/teesside.png" />
+                        </p>
                     </td>
+
                 </tr>
             </table>
 
         </td>
+
     </tr>
     <tr>
         <td class="container">
