--- a/simple.html
+++ b/simple.html
@@ -162,9 +162,9 @@
                         <center><strong><p>We're looking forward to seeing you there!</strong></br><em>Prague College & its students</em></p></center>
 
                           <p class="affil">
-                          <img class="affilate" src="images/soad.png" />
-                          <img class="affilate two" src="images/pclogo.png" />
-                          <img class="affilate" src="images/teesside.png" />
+                          <img class="affilate" src="https://raw.githubusercontent.com/violetzie/PC_Invite/master/images/soad.png" />
+                          <img class="affilate two" src="https://raw.githubusercontent.com/violetzie/PC_Invite/master/images/pclogo.png" />
+                          <img class="affilate" src="https://raw.githubusercontent.com/violetzie/PC_Invite/master/images/teesside.png" />
                         </p>
                     </td>
 
