--- a/simple.html
+++ b/simple.html
@@ -144,9 +144,9 @@
                     <td class="content">
 
                         <h2>Hello!</h2>
-                        <p>Prague College and it's students would like to invite you to the HND Graphic design and Interactive Media 2nd Year Exhibitions in which students of the finishing classes will have a chance to present the works that they have done in their two years presence at Prague College to the wide public.</p>
+                        <p>Prague College and it's students would like to invite you to the <b>HND Graphic design and Interactive Media 2nd Year Exhibitions</b> in which students of the finishing classes will have a chance to present the works that they have done in their two years presence at Prague College to the wide public.</p>
 <p>Whether you are interested in unique artistic expression, design, art, printed and digital media or any other part of graphic design and interactive media, you should find what catches your eye with 23 students presenting from the Graphic Design programme and (X) students from Interactive Media. Each and every student worked hard to present their portfolio and works in the most professional matter.</p>
-<p>During the opening day you'll also be able to refresh with a wide variety of wines as well as foods and delicous snacks which will be made by the students themselves. The event is taking place in the main building of Prague College at Polská 10, Vinohrady on the 2nd of June, 2015 starting at 5PM. It will take place there for the following rest of the week, so don't worry if you can't make it to the opening day.</p>
+<p>During the opening day you'll also be able to refresh with a wide variety of wines as well as foods and delicous snacks which will be made by the students themselves. The event is taking place in the main building of Prague College at <b>Polská 10, Vinohrady</b> on the <b>2nd of June, 2015 starting at 5PM</b>. It will take place there for the following rest of the week, so don't worry if you can't make it to the opening day.</p>
                         <table>
                             <tr>
                                 <td align="center">
